--- a/01-read-raw.ipynb
+++ b/01-read-raw.ipynb
@@ -83,7 +83,8 @@
     "report = mne.Report(title=\"Raw example\")\n",
     "# This method also accepts a path, e.g., raw=raw_path\n",
     "report.add_raw(raw=raw, title=\"Raw\", psd=False)  # omit PSD plot\n",
-    "report.save(\"report_raw.html\", overwrite=True)"
+    "report.save(\"report_raw.html\", overwrite=True)\n",
+    "\n"
    ]
   },
   {
@@ -155,6 +156,48 @@
     "fig = mne.viz.plot_events(\n",
     "    events, sfreq=raw.info[\"sfreq\"], first_samp=raw.first_samp, event_id=event_id\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ef71fd8c-4411-41e5-b702-aac02e96143b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embedding : jquery-3.6.0.min.js\n",
+      "Embedding : bootstrap.bundle.min.js\n",
+      "Embedding : bootstrap.min.css\n",
+      "Embedding : bootstrap-table/bootstrap-table.min.js\n",
+      "Embedding : bootstrap-table/bootstrap-table.min.css\n",
+      "Embedding : bootstrap-table/bootstrap-table-copy-rows.min.js\n",
+      "Embedding : bootstrap-table/bootstrap-table-export.min.js\n",
+      "Embedding : bootstrap-table/tableExport.min.js\n",
+      "Embedding : bootstrap-icons/bootstrap-icons.mne.min.css\n",
+      "Embedding : highlightjs/highlight.min.js\n",
+      "Embedding : highlightjs/atom-one-dark-reasonable.min.css\n",
+      "Saving report to : C:\\Users\\User\\Documents\\NYU\\MEG-EEG-pipeline\\report_events.html\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\User\\\\Documents\\\\NYU\\\\MEG-EEG-pipeline\\\\report_events.html'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sfreq = raw.info[\"sfreq\"]\n",
+    "report = mne.Report(title=\"Events example\")\n",
+    "report.add_events(events=events, title='Events from \"events\"', sfreq=sfreq)\n",
+    "report.save(\"report_events.html\", overwrite=True)"
    ]
   },
   {
