--- a/02-Creating epochs and generating evoked responses.ipynb
+++ b/02-Creating epochs and generating evoked responses.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "4c20130d-e17e-455f-9a9c-9e00d2361553",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "56af5ef9-0c55-466a-9c43-d48a4d7b174c",
    "metadata": {},
    "outputs": [
@@ -521,15 +521,47 @@
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'evokeds' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m report \u001b[38;5;241m=\u001b[39m mne\u001b[38;5;241m.\u001b[39mReport(title\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEvoked\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m report\u001b[38;5;241m.\u001b[39madd_evokeds(\n\u001b[1;32m----> 3\u001b[0m     evokeds\u001b[38;5;241m=\u001b[39m\u001b[43mevokeds\u001b[49m,\n\u001b[0;32m      4\u001b[0m     n_time_points\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m,\n\u001b[0;32m      5\u001b[0m )\n\u001b[0;32m      6\u001b[0m report\u001b[38;5;241m.\u001b[39msave(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreport_evoked.html\u001b[39m\u001b[38;5;124m\"\u001b[39m, overwrite\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'evokeds' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\anaconda3\\envs\\mne\\Lib\\site-packages\\joblib\\parallel.py:1847: RuntimeWarning: Estimated head radius (11.2 cm) is above the 99th percentile for adult head size.\n",
+      "  res = func(*args, **kwargs)\n",
+      "C:\\Users\\User\\anaconda3\\envs\\mne\\Lib\\site-packages\\joblib\\parallel.py:1847: RuntimeWarning: Estimated head radius (11.2 cm) is above the 99th percentile for adult head size.\n",
+      "  res = func(*args, **kwargs)\n",
+      "C:\\Users\\User\\anaconda3\\envs\\mne\\Lib\\site-packages\\joblib\\parallel.py:1847: RuntimeWarning: Estimated head radius (11.2 cm) is above the 99th percentile for adult head size.\n",
+      "  res = func(*args, **kwargs)\n",
+      "C:\\Users\\User\\anaconda3\\envs\\mne\\Lib\\site-packages\\joblib\\parallel.py:1847: RuntimeWarning: Estimated head radius (11.2 cm) is above the 99th percentile for adult head size.\n",
+      "  res = func(*args, **kwargs)\n",
+      "C:\\Users\\User\\anaconda3\\envs\\mne\\Lib\\site-packages\\joblib\\parallel.py:1847: RuntimeWarning: Estimated head radius (11.2 cm) is above the 99th percentile for adult head size.\n",
+      "  res = func(*args, **kwargs)\n",
+      "C:\\Users\\User\\anaconda3\\envs\\mne\\Lib\\site-packages\\joblib\\parallel.py:1847: RuntimeWarning: Estimated head radius (11.2 cm) is above the 99th percentile for adult head size.\n",
+      "  res = func(*args, **kwargs)\n",
+      "C:\\Users\\User\\anaconda3\\envs\\mne\\Lib\\site-packages\\joblib\\parallel.py:1847: RuntimeWarning: Estimated head radius (11.2 cm) is above the 99th percentile for adult head size.\n",
+      "  res = func(*args, **kwargs)\n",
+      "C:\\Users\\User\\anaconda3\\envs\\mne\\Lib\\site-packages\\joblib\\parallel.py:1847: RuntimeWarning: Estimated head radius (11.2 cm) is above the 99th percentile for adult head size.\n",
+      "  res = func(*args, **kwargs)\n",
+      "C:\\Users\\User\\anaconda3\\envs\\mne\\Lib\\site-packages\\joblib\\parallel.py:1847: RuntimeWarning: Estimated head radius (11.2 cm) is above the 99th percentile for adult head size.\n",
+      "  res = func(*args, **kwargs)\n",
+      "C:\\Users\\User\\anaconda3\\envs\\mne\\Lib\\site-packages\\joblib\\parallel.py:1847: RuntimeWarning: Estimated head radius (11.2 cm) is above the 99th percentile for adult head size.\n",
+      "  res = func(*args, **kwargs)\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving report to : C:\\Users\\User\\Documents\\NYU\\MEG-EEG-pipeline\\report_evoked.html\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\User\\\\Documents\\\\NYU\\\\MEG-EEG-pipeline\\\\report_evoked.html'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
