--- a/02-Creating epochs and generating evoked responses.ipynb
+++ b/02-Creating epochs and generating evoked responses.ipynb
@@ -439,36 +439,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "dabf10a4-a1ee-48bc-b05a-a54a3dfd5f81",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileExistsError",
-     "evalue": "Destination file exists. Please use option \"overwrite=True\" to force overwriting.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Saving evoked data\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mmne\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite_evokeds\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpathlib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPath\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mout_data\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mevokeds_ave.fif\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m                  \u001b[49m\u001b[43mevoked\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mevoked_closed\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mevoked_open\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m<decorator-gen-227>:12\u001b[0m, in \u001b[0;36mwrite_evokeds\u001b[1;34m(fname, evoked, on_mismatch, overwrite, verbose)\u001b[0m\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\mne\\Lib\\site-packages\\mne\\evoked.py:1980\u001b[0m, in \u001b[0;36mwrite_evokeds\u001b[1;34m(fname, evoked, on_mismatch, overwrite, verbose)\u001b[0m\n\u001b[0;32m   1949\u001b[0m \u001b[38;5;129m@verbose\u001b[39m\n\u001b[0;32m   1950\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrite_evokeds\u001b[39m(fname, evoked, \u001b[38;5;241m*\u001b[39m, on_mismatch\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraise\u001b[39m\u001b[38;5;124m\"\u001b[39m, overwrite\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m   1951\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Write an evoked dataset to a file.\u001b[39;00m\n\u001b[0;32m   1952\u001b[0m \n\u001b[0;32m   1953\u001b[0m \u001b[38;5;124;03m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1978\u001b[0m \u001b[38;5;124;03m        via `mne.read_evokeds`.\u001b[39;00m\n\u001b[0;32m   1979\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 1980\u001b[0m     \u001b[43m_write_evokeds\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mevoked\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mon_mismatch\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mon_mismatch\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moverwrite\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43moverwrite\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\mne\\Lib\\site-packages\\mne\\evoked.py:1987\u001b[0m, in \u001b[0;36m_write_evokeds\u001b[1;34m(fname, evoked, check, on_mismatch, overwrite)\u001b[0m\n\u001b[0;32m   1984\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Write evoked data.\"\"\"\u001b[39;00m\n\u001b[0;32m   1985\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdipole\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DipoleFixed  \u001b[38;5;66;03m# avoid circular import\u001b[39;00m\n\u001b[1;32m-> 1987\u001b[0m fname \u001b[38;5;241m=\u001b[39m \u001b[43m_check_fname\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moverwrite\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43moverwrite\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1988\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m check:\n\u001b[0;32m   1989\u001b[0m     check_fname(\n\u001b[0;32m   1990\u001b[0m         fname, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mevoked\u001b[39m\u001b[38;5;124m\"\u001b[39m, (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-ave.fif\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-ave.fif.gz\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_ave.fif\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_ave.fif.gz\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1991\u001b[0m     )\n",
-      "File \u001b[1;32m<decorator-gen-0>:12\u001b[0m, in \u001b[0;36m_check_fname\u001b[1;34m(fname, overwrite, must_exist, name, need_dir, check_bids_split, verbose)\u001b[0m\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\mne\\Lib\\site-packages\\mne\\utils\\check.py:260\u001b[0m, in \u001b[0;36m_check_fname\u001b[1;34m(fname, overwrite, must_exist, name, need_dir, check_bids_split, verbose)\u001b[0m\n\u001b[0;32m    258\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m fname\u001b[38;5;241m.\u001b[39mexists():\n\u001b[0;32m    259\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m overwrite:\n\u001b[1;32m--> 260\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileExistsError\u001b[39;00m(\n\u001b[0;32m    261\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDestination file exists. Please use option \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    262\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moverwrite=True\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m to force overwriting.\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    263\u001b[0m         )\n\u001b[0;32m    264\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m overwrite \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mread\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m    265\u001b[0m         logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOverwriting existing file.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mFileExistsError\u001b[0m: Destination file exists. Please use option \"overwrite=True\" to force overwriting."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting existing file.\n"
      ]
     }
    ],
    "source": [
     "# Saving evoked data\n",
     "mne.write_evokeds(fname=pathlib.Path('out_data') / 'evokeds_ave.fif',\n",
-    "                  evoked=[evoked_closed, evoked_open])"
+    "                  evoked=[evoked_closed, evoked_open], overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "4c20130d-e17e-455f-9a9c-9e00d2361553",
    "metadata": {},
    "outputs": [
@@ -499,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "56af5ef9-0c55-466a-9c43-d48a4d7b174c",
    "metadata": {},
    "outputs": [
@@ -550,6 +541,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Overwriting existing file.\n",
       "Saving report to : C:\\Users\\User\\Documents\\NYU\\MEG-EEG-pipeline\\report_evoked.html\n"
      ]
     },
@@ -559,7 +551,7 @@
        "'C:\\\\Users\\\\User\\\\Documents\\\\NYU\\\\MEG-EEG-pipeline\\\\report_evoked.html'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
